force-app/main/default/objects/Account/fields/ABM_Last_PES__c.field-meta.xml
<CustomField>
    <fullName>ABM_Last_PES__c</fullName>
    <description>The previous predictive engagement score of the account.</description>
    <inlineHelpText>The previous predictive engagement score of the account.</inlineHelpText>
    <label>ABM | Last PES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>