force-app/main/default/objects/Account/fields/ABM_PES_Last_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>ABM_PES_Last_Change_Date__c</fullName>
    <description>Date stamped when PES changes to x value.</description>
    <label>ABM | PES Last Change Date</label>
    <type>Date</type>
</CustomField>