force-app/main/default/objects/Account/fields/Account_Card_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Card_Name__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
This will be the name of the company that gets printed on the card and input into Peachtree.</description>
    <inlineHelpText>Account name printed on customer&apos;s wallet card (30 character limit).</inlineHelpText>
    <label>Account Card Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>