force-app/main/default/objects/Account/fields/Account_Codes__c.field-meta.xml
<CustomField>
    <fullName>Account_Codes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Requires chairperson to enter an account (billing) code on the bridge prior to starting an audio call.</inlineHelpText>
    <label>Account Code Prompt</label>
    <type>Checkbox</type>
</CustomField>