force-app/main/default/objects/Account/fields/Account_Deletion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Deletion_Notes__c</fullName>
    <label>Account Deletion Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>