force-app/main/default/objects/Account/fields/Account_Executive_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_Email__c</fullName>
    <formula>Account_Executive_Lookup__r.FirstName + &quot;.&quot; + Account_Executive_Lookup__r.LastName + &quot;@readytalk.com&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Executive Email</label>
    <type>Text</type>
</CustomField>