force-app/main/default/objects/Account/fields/Account_Not_Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Not_Billing_Notes__c</fullName>
    <description>If the &quot;Bill Account&quot; checkbox is unchecked, the user must enter an explanation as to why in this text box.</description>
    <inlineHelpText>If &quot;Bill Account&quot; is unchecked, an explanation must be entered.</inlineHelpText>
    <label>Account &quot;Not Billing&quot; Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>