force-app/main/default/objects/Account/fields/Account_Overdue_Balance__c.field-meta.xml
<CustomField>
    <fullName>Account_Overdue_Balance__c</fullName>
    <description>Overdue account balance from NetSuite</description>
    <inlineHelpText>Please click &quot;Update from NetSuite&quot; button to ensure accuracy of this field.</inlineHelpText>
    <label>Account Overdue Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>