force-app/main/default/objects/Account/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Formula field to pull account owner name from lookup (used by prov)</description>
    <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>