force-app/main/default/objects/Account/fields/Account_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Source__c</fullName>
    <label>Account Source (CUSTOM)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AdWeek</fullName>
            </value>
            <value>
                <fullName>DnB Prospect</fullName>
            </value>
            <value>
                <fullName>Dreamforce</fullName>
            </value>
            <value>
                <fullName>My Software Accounts</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Rep Generated</fullName>
            </value>
            <value>
                <fullName>Target Euro 2016</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>