force-app/main/default/objects/Account/fields/Account_Type_for_Match__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_for_Match__c</fullName>
    <description>Used to determine the matching rule</description>
    <label>Account Type for Match</label>
    <length>50</length>
    <type>Text</type>
</CustomField>