force-app/main/default/objects/Account/fields/Account_Updates__c.field-meta.xml
<CustomField>
    <fullName>Account_Updates__c</fullName>
    <label>Account Updates</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>