force-app/main/default/objects/Account/fields/Account_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Account_Utilization__c</fullName>
    <formula>IF(NumberOfEmployees = 0, 0, Licensed_Internal_Users__c / NumberOfEmployees
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculation of the licensed users vs the total employees</inlineHelpText>
    <label>Account Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>