force-app/main/default/objects/Account/fields/Account_Utilization_Rating__c.field-meta.xml
<CustomField>
    <fullName>Account_Utilization_Rating__c</fullName>
    <formula>IF(Account_Utilization__c=0,0,
  IF(Account_Utilization__c&gt;0.95,1,						
      IF(Account_Utilization__c&gt;0.75,IF( NumberOfEmployees&lt;=200,1,2),
          IF(Account_Utilization__c&gt;0.4,IF( NumberOfEmployees&lt;=200,2,3),	
              IF(Account_Utilization__c&lt;0.40000001,IF( NumberOfEmployees&lt;=200,2,4),NULL)
                )
              )
            )
         )</formula>
    <inlineHelpText>&gt;95% Overutilized
&gt;75% Nearly utilized
&gt;50% Partially utilized
&lt;50% Underutilized</inlineHelpText>
    <label>Account Utilization Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>