force-app/main/default/objects/Account/fields/Active_Access_Codes__c.field-meta.xml
<CustomField>
    <fullName>Active_Access_Codes__c</fullName>
    <description>Count of active access codes for the account. Field is updated by roll-up helper based on active access codes on contact record.</description>
    <label>Active Access Codes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>