force-app/main/default/objects/Account/fields/Active_FoxDen_Users__c.field-meta.xml
<CustomField>
    <fullName>Active_FoxDen_Users__c</fullName>
    <label>Active FoxDen Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>