force-app/main/default/objects/Account/fields/Active_Order_License_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>Active_Order_License_Amount_2__c</fullName>
    <description>This field was created to get a snapshot of the last value of the &quot;Active Order Licensed Amount&quot; field before the account becomes deactivated. I cannot track the history of the original field as it is a Roll-Up Summary field.</description>
    <formula>IF( Active_Account__c = TRUE, Active_Order_Licensed_Amount__c,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Order License Amount 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>