force-app/main/default/objects/Account/fields/Add_E_Mails__c.field-meta.xml
<CustomField>
    <fullName>Add_E_Mails__c</fullName>
    <inlineHelpText>If inserting multiple email addresses, use the SAME delimiter between email address (either commas, semi-colons or line-breaks). Do not mix-match delimiters.</inlineHelpText>
    <label>Add&#39;l Provisioning Email Addresses</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>