force-app/main/default/objects/Account/fields/Address_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Validation_Status__c</fullName>
    <description>DO NOT DELETE! This field is written to by the billing system.</description>
    <label>Address Validation Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>