force-app/main/default/objects/Account/fields/Admin_Flag_Text__c.field-meta.xml
<CustomField>
    <fullName>Admin_Flag_Text__c</fullName>
    <label>Admin Flag (Text)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>