force-app/main/default/objects/Account/fields/AE_Running_User__c.field-meta.xml
<CustomField>
    <fullName>AE_Running_User__c</fullName>
    <formula>IF( Account_Executive_Lookup__r.Id  = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE Running User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>