force-app/main/default/objects/Account/fields/Agent_Code__c.field-meta.xml
<CustomField>
    <fullName>Agent_Code__c</fullName>
    <inlineHelpText>Please select from corresponding Referral Partner</inlineHelpText>
    <label>Agent Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Referral_Partner__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3VL</fullName>
            </value>
            <value>
                <fullName>ABAG</fullName>
            </value>
            <value>
                <fullName>AGF</fullName>
            </value>
            <value>
                <fullName>AGM</fullName>
            </value>
            <value>
                <fullName>Alabama Association of Nonprofits</fullName>
            </value>
            <value>
                <fullName>Alliance of Arizona Nonprofits</fullName>
            </value>
            <value>
                <fullName>Arkansas Nonprofit Alliance</fullName>
            </value>
            <value>
                <fullName>CAF</fullName>
            </value>
            <value>
                <fullName>California Association of Nonprofits</fullName>
            </value>
            <value>
                <fullName>CCP</fullName>
            </value>
            <value>
                <fullName>CMF</fullName>
            </value>
            <value>
                <fullName>CNJG</fullName>
            </value>
            <value>
                <fullName>Colorado Nonprofit Association</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Connecticut Association of Nonprofits</fullName>
            </value>
            <value>
                <fullName>CSF</fullName>
            </value>
            <value>
                <fullName>Deleware Association of Nonprofit Agencies</fullName>
            </value>
            <value>
                <fullName>DF</fullName>
            </value>
            <value>
                <fullName>DFSF</fullName>
            </value>
            <value>
                <fullName>DFW</fullName>
            </value>
            <value>
                <fullName>Donors Forum (IL)</fullName>
            </value>
            <value>
                <fullName>DVG</fullName>
            </value>
            <value>
                <fullName>Florida Association of Nonprofit Organizations</fullName>
            </value>
            <value>
                <fullName>FPN</fullName>
            </value>
            <value>
                <fullName>GCG</fullName>
            </value>
            <value>
                <fullName>GCRI</fullName>
            </value>
            <value>
                <fullName>GFNY</fullName>
            </value>
            <value>
                <fullName>GOSW</fullName>
            </value>
            <value>
                <fullName>GWPA</fullName>
            </value>
            <value>
                <fullName>Hawaii Alliance of Nonprofit Organizations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>