force-app/main/default/objects/Account/fields/Alias_Name__c.field-meta.xml
<CustomField>
    <fullName>Alias_Name__c</fullName>
    <inlineHelpText>Allows for the population of an Alias Name or DBA used by a business.  Sometimes also referred to as the Trade Name.</inlineHelpText>
    <label>Alias Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>