force-app/main/default/objects/Account/fields/All_Account_Mass_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>All_Account_Mass_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that all contacts at this account location, with the exception of Account Administrators, should be opted out of mass emails.</description>
    <inlineHelpText>CAUTION: Checking/Unchecking this field will make contact preference changes to all contacts on this account automatically. Account Admins with NOT be opted out when checked.</inlineHelpText>
    <label>All Account Mass Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>