force-app/main/default/objects/Account/fields/Annual_Spend_Rating__c.field-meta.xml
<CustomField>
    <fullName>Annual_Spend_Rating__c</fullName>
    <description>This is the Annual Spend ranked between 1 and 4</description>
    <formula>IF(Active_Order_Licensed_Amount__c=0,0,
  IF(Active_Order_Licensed_Amount__c&gt;50000,4,
    IF(Active_Order_Licensed_Amount__c&gt;25000,3,
      IF(Active_Order_Licensed_Amount__c&gt;10000,2,
        IF(Active_Order_Licensed_Amount__c&lt;10001,1,NULL)
        )
        )
      )
    )</formula>
    <inlineHelpText>1.0 - Annual Spend
&gt;$50,000 annual spend
&gt;$25,000 annual spend
&gt;$10,000 annual spend
&lt;$10,000 annual spend</inlineHelpText>
    <label>Annual Spend Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>