force-app/main/default/objects/Account/fields/Archive_Period__c.field-meta.xml
<CustomField>
    <fullName>Archive_Period__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Make sure this is the right length (see billing)</description>
    <inlineHelpText>Enter the number of days until archives are deleted. Zero (0) is the default. Zero indicates that the archives will not be deleted and will be held indefinitely.</inlineHelpText>
    <label>Archive Period (list # of days)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>