force-app/main/default/objects/Account/fields/Audio_Subscription_Size__c.field-meta.xml
<CustomField>
    <fullName>Audio_Subscription_Size__c</fullName>
    <inlineHelpText>Indicates the number of audio ports available (account default is 96). Change port size to 150 at access code level, if needed.</inlineHelpText>
    <label>Number of Audio Ports</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>150</fullName>
                <default>true</default>
                <label>150</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>