force-app/main/default/objects/Account/fields/Auto_Delete_Slides__c.field-meta.xml
<CustomField>
    <fullName>Auto_Delete_Slides__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, presentation slides will be automatically deleted at the end of a web meeting.</inlineHelpText>
    <label>Auto Delete Slides</label>
    <type>Checkbox</type>
</CustomField>