force-app/main/default/objects/Account/fields/AutoRenewalEmail__c.field-meta.xml
<CustomField>
    <fullName>AutoRenewalEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For every access code subscribed to an annual plan, send the Contact an email, 30 days prior to the plan start date, indicating that their subscription will be automatically renewed.</description>
    <label>Automated Renewal Email</label>
    <type>Checkbox</type>
</CustomField>