force-app/main/default/objects/Account/fields/BaseConversion__c.field-meta.xml
<CustomField>
    <fullName>BaseConversion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Controlled by Marketing teams only, backend field only</inlineHelpText>
    <label>Base Conversion</label>
    <type>Checkbox</type>
</CustomField>