force-app/main/default/objects/Account/fields/BBS_CoreOrgId__c.field-meta.xml
<CustomField>
    <fullName>BBS_CoreOrgId__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Parent organization id in RT Core.</description>
    <label>RT Core OrgId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>