force-app/main/default/objects/Account/fields/BBS_InvoiceFrequency__c.field-meta.xml
<CustomField>
    <fullName>BBS_InvoiceFrequency__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Invoice Frequency</description>
    <label>Invoice Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MONTHLY</fullName>
                <default>true</default>
                <label>MONTHLY</label>
            </value>
            <value>
                <fullName>WEEKLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>