force-app/main/default/objects/Account/fields/BBS_L3ServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>BBS_L3ServiceProvider__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Service provider used to provision with L(3)</description>
    <label>L3 ServiceProvider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>247</fullName>
            </value>
            <value>
                <fullName>558</fullName>
            </value>
            <value>
                <fullName>645</fullName>
            </value>
            <value>
                <fullName>737</fullName>
            </value>
            <value>
                <fullName>755</fullName>
                <default>true</default>
                <label>755</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>