force-app/main/default/objects/Account/fields/BBS_L3Status__c.field-meta.xml
<CustomField>
    <fullName>BBS_L3Status__c</fullName>
    <description>Last status message from Level(3) provisioning. Set by system.</description>
    <label>L3 Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>