force-app/main/default/objects/Account/fields/BBS_L3WholesaleCompany__c.field-meta.xml
<CustomField>
    <fullName>BBS_L3WholesaleCompany__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
L(3) Wholesale Company Id</description>
    <inlineHelpText>This will be the old orgId for migrated data, or the accountId on new accounts.</inlineHelpText>
    <label>L3 Wholesale Company</label>
    <length>20</length>
    <type>Text</type>
</CustomField>