force-app/main/default/objects/Account/fields/BBS_LastInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>BBS_LastInvoiceDate__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Date of last invoice (plan changes may not be made prior to this date)</description>
    <label>Last Invoice Date</label>
    <type>Date</type>
</CustomField>