force-app/main/default/objects/Account/fields/BBS_NextInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>BBS_NextInvoiceDate__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Next scheduled invoice date</description>
    <label>Next Invoice Date</label>
    <type>Date</type>
</CustomField>