force-app/main/default/objects/Account/fields/BBS_Status__c.field-meta.xml
<CustomField>
    <fullName>BBS_Status__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
New Billing System status (read only)</description>
    <label>BBS Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
                <default>true</default>
                <label>NEW</label>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>DELETED</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>ERROR_CREATE</fullName>
            </value>
            <value>
                <fullName>ERROR_DELETE</fullName>
            </value>
            <value>
                <fullName>ERROR_UPDATE</fullName>
            </value>
            <value>
                <fullName>PENDING_DELETE</fullName>
            </value>
            <value>
                <fullName>PENDING_UPDATE</fullName>
            </value>
            <value>
                <fullName>PENDING_PROV</fullName>
            </value>
            <value>
                <fullName>SUSPENDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>