force-app/main/default/objects/Account/fields/BBS_StatusMessage__c.field-meta.xml
<CustomField>
    <fullName>BBS_StatusMessage__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Status Message from new billing system</description>
    <label>BBS Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>