force-app/main/default/objects/Account/fields/Biling_Contact__c.field-meta.xml
<CustomField>
    <fullName>Biling_Contact__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Name of billing contact person.</description>
    <label>Billing Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>