force-app/main/default/objects/Account/fields/Bill_Address_Verification__c.field-meta.xml
<CustomField>
    <fullName>Bill_Address_Verification__c</fullName>
    <description>Date the customer&#39;s address was verified (mainly for tax purposes).</description>
    <label>Bill Address Verification</label>
    <type>Date</type>
</CustomField>