force-app/main/default/objects/Account/fields/Billed_Revenue_Last_13_Months__c.field-meta.xml
<CustomField>
    <fullName>Billed_Revenue_Last_13_Months__c</fullName>
    <inlineHelpText>Total amount of billed revenue over the past 13 month&apos;s from all premier companies (PGi Companies object) associated to this Account.  Although the currency may show differently, this amount is always in USD.</inlineHelpText>
    <label>Billed Revenue - Last 13 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>