force-app/main/default/objects/Account/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Billing Contact Email</label>
    <type>Email</type>
</CustomField>