force-app/main/default/objects/Account/fields/Billing_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Phone__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Phone number for billing contact for this account</description>
    <label>Billing Contact Phone</label>
    <type>Phone</type>
</CustomField>