force-app/main/default/objects/Account/fields/Billing_Contact_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Phone_Extension__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Billing Contact Phone Extension</label>
    <length>15</length>
    <type>Text</type>
</CustomField>