force-app/main/default/objects/Account/fields/Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle__c</fullName>
    <description>This will pull in the billing cycle value to the account</description>
    <inlineHelpText>Billing cycle from the active order opportunity</inlineHelpText>
    <label>Billing Cycle</label>
    <summarizedField>Opportunity.Billing_Cycle__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>