force-app/main/default/objects/Account/fields/Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notes__c</fullName>
    <description>Populated by ASX
1080 Accounts have this populated 857 of those are cancelled
Not sure this is still in use</description>
    <label>Billing Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>