force-app/main/default/objects/Account/fields/Billling_ID__c.field-meta.xml
<CustomField>
    <fullName>Billling_ID__c</fullName>
    <description>The id of this account as it is in the billing system</description>
    <externalId>true</externalId>
    <label>Billling ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>