force-app/main/default/objects/Account/fields/Bonus_Exception__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be checked if the account should have commission extended beyond the first 12 billing months.</description>
    <label>Bonus Exception</label>
    <type>Checkbox</type>
</CustomField>