force-app/main/default/objects/Account/fields/CDR_Recipient_Emails__c.field-meta.xml
<CustomField>
    <fullName>CDR_Recipient_Emails__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Email addresses of those within the account who should receive the CDRs each month.</description>
    <inlineHelpText>Include email addresses of individuals who should receive the selected CDR/s. Include proper email addresses, separated by commas, semi-colons or line breaks.</inlineHelpText>
    <label>CDR Recipient Email/s</label>
    <type>TextArea</type>
</CustomField>