force-app/main/default/objects/Account/fields/CDR_Type__c.field-meta.xml
<CustomField>
    <fullName>CDR_Type__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Indicates which CDR option (if any) that the customer would like to receive once per month with the billing run.</description>
    <inlineHelpText>Call Detail Report (provides monthly audio conferencing details for the account)</inlineHelpText>
    <label>CDR Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rated</fullName>
            </value>
            <value>
                <fullName>Unrated</fullName>
            </value>
            <value>
                <fullName>Conference Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>