force-app/main/default/objects/Account/fields/Check_Add_Emails__c.field-meta.xml
<CustomField>
    <fullName>Check_Add_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**DELETE after BBS release**</description>
    <label>Send Copy of Provisioning Emails</label>
    <type>Checkbox</type>
</CustomField>