force-app/main/default/objects/Account/fields/Collab_UC_Buying_Stage_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Collab_UC_Buying_Stage_Purchase_Date__c</fullName>
    <description>Date of when Account Buying Stage = &quot;Purchase&quot;</description>
    <inlineHelpText>Last date of when Account Buying Stage was &quot;Purchase&quot;</inlineHelpText>
    <label>Collab/UC Buying Stage Purchase Date</label>
    <type>Date</type>
</CustomField>