force-app/main/default/objects/Account/fields/Collab_UC_Initial_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Collab_UC_Initial_Time_Stamp__c</fullName>
    <description>Time stamp of first buying stage assigned to Account</description>
    <inlineHelpText>Time stamp of first buying stage assigned to Account</inlineHelpText>
    <label>Collab/UC Initial Time Stamp</label>
    <type>Date</type>
</CustomField>