force-app/main/default/objects/Account/fields/Collaborators__c.field-meta.xml
<CustomField>
    <fullName>Collaborators__c</fullName>
    <description>this is the adjusted picklist from SugarCRM to better handle the data is migrated</description>
    <label># Collaborators</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 10</fullName>
            </value>
            <value>
                <fullName>11-25</fullName>
            </value>
            <value>
                <fullName>26-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-250</fullName>
            </value>
            <value>
                <fullName>251-500</fullName>
            </value>
            <value>
                <fullName>501-1,000</fullName>
            </value>
            <value>
                <fullName>1,001-5,000</fullName>
            </value>
            <value>
                <fullName>5,001-10,000</fullName>
            </value>
            <value>
                <fullName>Greater than 10,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>